add source and back link

--- a/inedx.html
+++ b/inedx.html
@@ -34,6 +34,17 @@
 
             <p class="total">Total: <span id="total">$</span></p>
 
+            <div class="source_back">
+
+                <a class="source_link" href="https://github.com/ShakhaAbdullaev/tip-calc" target="_blank">Source Code</a>
+
+                <a class="back_link" href="../index.html">Back</a>
+
+            </div>
+
+
+            
+
         </div>
 
     </div>
